add new website from server na

--- a/xem-phim-bo/than-vo-thien-ton/index.html
+++ b/xem-phim-bo/than-vo-thien-ton/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1661,62 +1661,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-ngoi-sao-lang-thang" title="Những Ngôi Sao Lang Thang">
+          <a class="list-top-movie-link" href="/phim-moi/su-cong-bang" title="Sự Công Bằng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ngoi-sao-lang-thang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-cong-bang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Ngôi Sao Lang Thang
+             Sự Công Bằng
             </span>
             <span class="list-top-movie-item-en">
-             Wandering Stars
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khuc-bi-ca-tu-nguon-coi" title="Khúc bi ca từ nguồn cội">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khuc-bi-ca-tu-nguon-coi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Khúc bi ca từ nguồn cội
-            </span>
-            <span class="list-top-movie-item-en">
-             Hillbilly Elegy
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bi-kip-yeu-duong-cua-phuong-tieu-thu" title="Bí Kíp Yêu Đương Của Phương Tiểu Thư">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-kip-yeu-duong-cua-phuong-tieu-thu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bí Kíp Yêu Đương Của Phương Tiểu Thư
-            </span>
-            <span class="list-top-movie-item-en">
-             Miss Fang's Love Secrets
+             Equity
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1727,21 +1683,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/high-school-musical-3-le-tot-nghiep" title="High School Musical 3: Lễ Tốt Nghiệp">
+          <a class="list-top-movie-link" href="/phim-moi/baby-blues" title="Baby Blues">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/high-school-musical-3-le-tot-nghiep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/baby-blues-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             High School Musical 3: Lễ Tốt Nghiệp
+             Baby Blues
             </span>
             <span class="list-top-movie-item-en">
-             High School Musical 3: Senior Year
+             Baby Blues
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1749,21 +1705,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/oats-studios" title="Oats Studios">
+          <a class="list-top-movie-link" href="/phim-moi/bon-nhan-cach" title="Bốn nhân cách">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oats-studios-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bon-nhan-cach-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Oats Studios
+             Bốn nhân cách
             </span>
             <span class="list-top-movie-item-en">
-             Oats Studios
+             Persona
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/co-gia-su-o-pho-69" title="Cô Gia Sư Ở Phố 69">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-gia-su-o-pho-69-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cô Gia Sư Ở Phố 69
+            </span>
+            <span class="list-top-movie-item-en">
+             69th Street Tutor Yuk Deokjin
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ben-trong-nhung-nha-tu-khoc-liet-nhat-the-gioi-phan-2" title="Bên trong những nhà tù khốc liệt nhất thế giới (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ben-trong-nhung-nha-tu-khoc-liet-nhat-the-gioi-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bên trong những nhà tù khốc liệt nhất thế giới (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Inside the World’s Toughest Prisons (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
