add new website from server na

--- a/xem-phim-bo/the-gioi-hoan-my/index.html
+++ b/xem-phim-bo/the-gioi-hoan-my/index.html
@@ -1200,7 +1200,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1691,84 +1691,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/snoopy-gioi-thieu-marcie-doc-nhat-vo-nhi" title="Snoopy Giới Thiệu: Marcie Độc Nhất Vô Nhị">
+          <a class="list-top-movie-link" href="/phim-moi/dai-tong-bac-dau-tu" title="Đại Tống Bắc Đẩu Tư">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/snoopy-gioi-thieu-marcie-doc-nhat-vo-nhi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-tong-bac-dau-tu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Snoopy Giới Thiệu: Marcie Độc Nhất Vô Nhị
+             Đại Tống Bắc Đẩu Tư
             </span>
             <span class="list-top-movie-item-en">
-             Snoopy Presents: One-of-a-Kind Marcie
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/america-the-beautiful" title="America the Beautiful">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/america-the-beautiful-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             America the Beautiful
-            </span>
-            <span class="list-top-movie-item-en">
-             America the Beautiful
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/huyen-thoai-songkran" title="Huyền Thoại Songkran">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huyen-thoai-songkran-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Huyền Thoại Songkran
-            </span>
-            <span class="list-top-movie-item-en">
-             Boxing Songkran
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lady-snowblood" title="Lady Snowblood">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lady-snowblood-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lady Snowblood
-            </span>
-            <span class="list-top-movie-item-en">
-             Lady Snowblood
+             Da Song Bei Wei Department
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1779,21 +1713,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hiep-si-thuong-hai" title="Hiệp Sĩ Thượng Hải">
+          <a class="list-top-movie-link" href="/phim-moi/nu-sinh-trung-hoc" title="Nữ Sinh Trung Học">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hiep-si-thuong-hai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-sinh-trung-hoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hiệp Sĩ Thượng Hải
+             Nữ Sinh Trung Học
             </span>
             <span class="list-top-movie-item-en">
-             Shanghai Knights
+             Azumanga Daioh
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/am-sat" title="Ám Sát">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-sat-2016-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ám Sát
+            </span>
+            <span class="list-top-movie-item-en">
+             Killer Assistant
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/doi-cuu-ho-bien-khoi-ran-san-ho-great-barrier" title="Đội cứu hộ biển khơi: Rạn san hô Great Barrier">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-cuu-ho-bien-khoi-ran-san-ho-great-barrier-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đội cứu hộ biển khơi: Rạn san hô Great Barrier
+            </span>
+            <span class="list-top-movie-item-en">
+             Octonauts &amp; the Great Barrier Reef
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cu-nga" title="Cú Ngã">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cu-nga-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cú Ngã
+            </span>
+            <span class="list-top-movie-item-en">
+             The Fall
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
