add new website from server na

--- a/xem-phim-bo/than-an-vuong-toa/index.html
+++ b/xem-phim-bo/than-an-vuong-toa/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1660,18 +1660,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hac-kim-co-dien" title="Hắc Kim Cổ Điện">
+          <a class="list-top-movie-link" href="/phim-moi/vo-hiep-hoang-phi-hong" title="Võ Hiệp Hoàng Phi Hồng">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hac-kim-co-dien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-hiep-hoang-phi-hong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hắc Kim Cổ Điện
+             Võ Hiệp Hoàng Phi Hồng
             </span>
             <span class="list-top-movie-item-en">
-             Misty Creed
+             The Return Of Wong Fei Hung
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1682,18 +1682,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-ba-kinh-yeu" title="Người Bà Kính Yêu">
+          <a class="list-top-movie-link" href="/phim-moi/r-l-stine-gio-ma-am-dung-nghi-ve-no" title="R.L. Stine – Giờ ma ám: Đừng nghĩ về nó">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-ba-kinh-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rl-stine-gio-ma-am-dung-nghi-ve-no-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Bà Kính Yêu
+             R.L. Stine – Giờ ma ám: Đừng nghĩ về nó
             </span>
             <span class="list-top-movie-item-en">
-             To My Dear Granny
+             R.L. Stine's The Haunting Hour: Don't Think About It
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1704,18 +1704,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/masha-va-ban-gau-phan-1" title="Masha và bạn Gấu (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/nha-doc-tai" title="Nhà Độc Tài">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/masha-va-ban-gau-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-doc-tai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Masha và bạn Gấu (Phần 1)
+             Nhà Độc Tài
             </span>
             <span class="list-top-movie-item-en">
-             Masha and the Bear (Season 1)
+             Dear Dictator
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1726,21 +1726,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-da-thay-vo-ngoai-tinh-truoc-mat-minh" title="Tôi Đã Thấy Vợ Ngoại Tình Trước Mặt Mình">
+          <a class="list-top-movie-link" href="/phim-moi/tri-luc-sieu-pham" title="Trí Lực Siêu Phàm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-da-thay-vo-ngoai-tinh-truoc-mat-minh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tri-luc-sieu-pham-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tôi Đã Thấy Vợ Ngoại Tình Trước Mặt Mình
+             Trí Lực Siêu Phàm
             </span>
             <span class="list-top-movie-item-en">
-             남편앞에서 섹스하는 아내
+             The Darkest Minds
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1748,21 +1748,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/horus-eye-season-1" title="Horus Eye (Season 1)">
+          <a class="list-top-movie-link" href="/phim-moi/lupin-phan-2" title="Lupin (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/horus-eye-season-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lupin-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Horus Eye (Season 1)
+             Lupin (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Horus Eye (Season 1)
+             Lupin (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
