add new website from server na

--- a/xem-phim-bo/the-gioi-khung-long-thuyet-hon-mang/index.html
+++ b/xem-phim-bo/the-gioi-khung-long-thuyet-hon-mang/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1657,18 +1657,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-tro-cach-am-tuyet-doi" title="Nhà Trọ Cách Âm Tuyệt Đối">
+          <a class="list-top-movie-link" href="/phim-moi/praise-this" title="Praise This">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-tro-cach-am-tuyet-doi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/praise-this-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhà Trọ Cách Âm Tuyệt Đối
+             Praise This
             </span>
             <span class="list-top-movie-item-en">
-             방음 안되는 변두리 여인숙
+             Praise This
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1679,40 +1679,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/den-voi-the-gioi-smartphone" title="Đến Với Thế Giới Smartphone !">
+          <a class="list-top-movie-link" href="/phim-moi/lam-on-dung-sung-toi-3" title="Làm Ơn Đừng Sủng Tôi 3">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/den-voi-the-gioi-smartphone-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lam-on-dung-sung-toi-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đến Với Thế Giới Smartphone !
+             Làm Ơn Đừng Sủng Tôi 3
             </span>
             <span class="list-top-movie-item-en">
-             Isekai wa smartphone to tomo ni
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-song-nhiem-mau" title="Cuộc Sống Nhiệm Màu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-song-nhiem-mau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc Sống Nhiệm Màu
-            </span>
-            <span class="list-top-movie-item-en">
-             Soul
+             Please Don't Spoil Me Season 3
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1723,21 +1701,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bon-ngay-tot-lanh" title="Bốn ngày tốt lành">
+          <a class="list-top-movie-link" href="/phim-moi/hac-bach-vo-song-phan-2" title="Hắc Bạch Vô Song Phần 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bon-ngay-tot-lanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hac-bach-vo-song-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bốn ngày tốt lành
+             Hắc Bạch Vô Song Phần 2
             </span>
             <span class="list-top-movie-item-en">
-             Four Good Days
+             Heibai Wushang 2nd Season Black and White Warriors Season 2
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1745,21 +1723,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mukai-oi-nhin-em-nay" title="Mukai ơi, nhìn em này">
+          <a class="list-top-movie-link" href="/phim-moi/cau-be-noi-loan" title="Cậu Bé Nổi Loạn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mukai-oi,-nhin-em-nay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-be-noi-loan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mukai ơi, nhìn em này
+             Cậu Bé Nổi Loạn
             </span>
             <span class="list-top-movie-item-en">
-             Turn to me Mukai-kun
+             Capernaum
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-bong-ma-vung-sugar-land" title="Những bóng ma vùng Sugar Land">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-bong-ma-vung-sugar-land-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Những bóng ma vùng Sugar Land
+            </span>
+            <span class="list-top-movie-item-en">
+             Ghosts of Sugar Land
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
